--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.10",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
