--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^10.3.10",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "moment": "^2.30.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
