--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.3.10",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
